@@ -43,6 +43,11 @@ Breaking Changes
   Prometheus' checks via ``promtool``. The labels have been renamed from ``le`` to
   ``leq``, given that they technically are less-than-or-equal values.
 
+- The ``iosource/Packet.h`` header no longer depends on libpcap being installed and no
+  longer directly includes the ``pcap.h`` header. This may cause some knock-on effects
+  in building plugins that were depending on this header and others that it included
+  indirectly.
+
 New Functionality
 -----------------
 
